[tool.poetry]
name = "dungeon-generator"
version = "0.1.0"
description = ""
authors = ["Sami Männistö <sami.mannisto1@gmail.com>"]
readme = "README.md"
packages = [{include = "dungeon_generator"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
