[tool.poetry]
name = "dungeon-generator"
version = "0.1.0"
description = ""
authors = ["Sami Männistö <sami.mannisto1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
invoke = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pylint = "^2.15.10"
coverage = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
